tests/type/errors/bad_subtract1.xi
foo() {
    x:int = 1-false
}